hydro_test_local/src/local/snapshots/hydro_test_local__local__teed_join__tests__teed_join@graphvis_mermaid.snap
---
source: hydro_test_local/src/local/teed_join.rs
expression: "joined.meta_graph().unwrap().to_mermaid(& Default :: default())"
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
classDef otherClass fill:#fdc,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa
1v1[\"(1v1) <code>source_stream(input_stream)</code>"/]:::pullClass
2v1[/"(2v1) <code>tee()</code>"\]:::pushClass
3v1[/"<div style=text-align:center>(3v1)</div> <code>map(<br>    stageleft::runtime_support::fn1_type_hint::&lt;<br>        u32,<br>        (u32, ()),<br>    &gt;({<br>        use crate::__staged::local::teed_join::*;<br>        |v| (v + 1, ())<br>    }),<br>)</code>"\]:::pushClass
4v1[/"<div style=text-align:center>(4v1)</div> <code>map(<br>    stageleft::runtime_support::fn1_type_hint::&lt;<br>        u32,<br>        (u32, ()),<br>    &gt;({<br>        use crate::__staged::local::teed_join::*;<br>        |v| (v - 1, ())<br>    }),<br>)</code>"\]:::pushClass
5v1[\"(5v1) <code>join_multiset::&lt;'tick, 'tick&gt;()</code>"/]:::pullClass
6v1[\"<div style=text-align:center>(6v1)</div> <code>map(<br>    stageleft::runtime_support::fn1_type_hint::&lt;<br>        (u32, ((), ())),<br>        u32,<br>    &gt;({<br>        use crate::__staged::local::teed_join::*;<br>        |t| t.0<br>    }),<br>)</code>"/]:::pullClass
7v3["(7v3) <code>handoff</code>"]:::otherClass
8v1[/"<div style=text-align:center>(8v1)</div> <code>for_each(<br>    stageleft::runtime_support::fn1_type_hint::&lt;<br>        u32,<br>        (),<br>    &gt;({<br>        use crate::__staged::local::teed_join::*;<br>        let output__free = output;<br>        |v| {<br>            output__free.send(v).unwrap();<br>        }<br>    }),<br>)</code>"\]:::pushClass
9v1["(9v1) <code>handoff</code>"]:::otherClass
1v1-->2v1
2v1-->3v1
2v1-->4v1
3v1-->7v3
4v1-->9v1
5v1-->6v1
7v3-->|0|5v1
6v1-->8v1
9v1-->|1|5v1
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    1v1
    2v1
    3v1
    4v1
    subgraph sg_1v1_var_stream_0 ["var <tt>stream_0</tt>"]
        1v1
    end
    subgraph sg_1v1_var_stream_1 ["var <tt>stream_1</tt>"]
        2v1
    end
    subgraph sg_1v1_var_stream_2 ["var <tt>stream_2</tt>"]
        3v1
    end
    subgraph sg_1v1_var_stream_4 ["var <tt>stream_4</tt>"]
        4v1
    end
end
subgraph sg_2v1 ["sg_2v1 stratum 0"]
    5v1
    6v1
    8v1
    subgraph sg_2v1_var_stream_5 ["var <tt>stream_5</tt>"]
        5v1
    end
    subgraph sg_2v1_var_stream_6 ["var <tt>stream_6</tt>"]
        6v1
    end
end
